# ao-kernel

./: .gitignore  0001-feat-context-faz1-automatic-memory-pipeline-governed.patch  0001-feat-context-hot-warm-cold-memory-tier-enforcement.patch  0001-feat-mcp-HTTP-transport-ao-kernel-mcp-serve-transpor.patch  0001-feat-tool-gateway-rewrite-ToolGateway-policy-gated-M.patch  0001-feat-v0.2.0-policy-facade-workspace-facade-6-profile.patch  0001-fix-4-functional-issues-router-fallback-session-road.patch  0001-fix-5-production-blockers-policy-semantics-guardrail.patch  0001-fix-docs-README-context-management-fix-fake-roadmap-.patch  0001-fix-wiring-connect-context-pipeline-to-LLM-MCP-runti.patch  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  gp12_livewrite_marker_1776971749.md  pyproject.toml
.ao/: workspace.json
.ao/consultations/: CNS-20260414-007.consensus.md  CNS-20260414-008.consensus.md  CNS-20260414-009.consensus.md  CNS-20260414-010.consensus.md  CNS-20260414-011.consensus.md  CNS-20260414-012.consensus.md  CNS-20260416-028v2.consensus.md  README.md
.ao/docs/: PROJECT_PLAN.md  PROJECT_PLAN_CONTEXT.md
.archive/patches/: 0001-feat-checkpoint-durable-checkpoint-resume-session-co.patch  0001-feat-context-faz2-context-compiler-profile-routing.patch  0001-feat-context-faz3-4-canonical-store-multi-agent-coor.patch  0001-feat-context-minimal-viable-context-loop-Decision-Ex.patch  0001-feat-governance-ao_kernel.governance-facade-fail-clo.patch  0001-feat-i18n-CLI-localization-English-default-Turkish-o.patch  0001-feat-streaming-tool-streaming-support-stream-tools-n.patch  0001-fix-final-3-issues-deprecated-gateway-context-teleme.patch  0001-fix-runtime-cleanup-PR1-type-annotation-doctor-exten.patch  0001-fix-state-canonical-path-field-name-persist-fail-clo.patch  0001-test-chaos-failure-smoke-tests-crash-recovery-corrup.patch  README.md
.claude/: settings.json
.claude/commands/: cns-open.md
.claude/hooks/: post-write-ruff.sh
.claude/plans/: FAZ-B-MASTER-PLAN.md  FAZ-C-MASTER-PLAN.md  FAZ5-MASTER-PLAN.md  GENERAL-PURPOSE-PRODUCTION-PROMOTION-STATUS.md  GP-1-GENERAL-PURPOSE-PRODUCTION-WIDENING-ROADMAP.md  GP-1.2-GH-CLI-PR-LIVE-WRITE-DISPOSABLE-DECISION.md  GP-1.3-BUG-FIX-FLOW-RELEASE-CLOSURE-DECISION.md  GP-1.4-CONTEXT-ORCHESTRATION-PROMOTION-DECISION.md  GP-1.5-PROGRAM-CLOSEOUT-DECISION.md  GP-2-CLOSEOUT-DECISION.md  GP-2-DEFERRED-SUPPORT-LANES-REPRIORITIZATION.md  GP-2.1-DEFERRED-LANE-EVIDENCE-DELTA-MAP.md  GP-2.2-COST-USD-RECONCILE-COMPLETENESS.md  GP-2.3-POST-STABLE-ADAPTER-CERTIFICATION-ENTRY.md  GP-2.4-CLAUDE-CODE-CLI-READ-ONLY-CERTIFICATION.md  GP-2.5-GH-CLI-PR-LIVE-WRITE-ROLLBACK-REHEARSAL.md  GP-3-PRODUCTION-CERTIFIED-ADAPTER-PROMOTION-ROADMAP.md  GP-3.1-CLAUDE-CODE-CLI-PREREQUISITE-TRUTH-REFRESH.md  GP-3.2-CLAUDE-CODE-CLI-GOVERNED-WORKFLOW-REPEATABILITY.md  GP-3.3-CLAUDE-CODE-CLI-FAILURE-MODE-MATRIX.md  GP-3.4-CLAUDE-CODE-CLI-EVIDENCE-COMPLETENESS.md  GP-3.5-CLAUDE-CODE-CLI-SUPPORT-BOUNDARY-DECISION.md  GP-3.6-PRODUCTION-CERTIFIED-ADAPTER-PROMOTION-CLOSEOUT.md  GP-4-CI-MANAGED-LIVE-ADAPTER-GATE-DESIGN.md  GP-4.1-CI-SAFE-LIVE-ADAPTER-GATE-SKELETON.md  GP-4.2-LIVE-ADAPTER-EVIDENCE-ARTIFACT-CONTRACT.md  GP-4.3-PROTECTED-ENVIRONMENT-SECRET-CONTRACT.md  GP-4.4-PROTECTED-LIVE-REHEARSAL-BLOCKED-DECISION.md  GP-4.5-SUPPORT-BOUNDARY-CLOSEOUT.md  GP-5-GENERAL-PURPOSE-PRODUCTION-PLATFORM-INTEGRATION.md  GP-5.1a-PROTECTED-GATE-PREREQUISITE-AUDIT.md  GP-5.3a-REPO-INTELLIGENCE-RETRIEVAL-EVIDENCE-CONTRACT.md  GP-5.3b-AGENT-CONTEXT-HANDOFF-CONTRACT.md  GP-5.3c-WORKFLOW-OPT-IN-DESIGN-CONTRACT.md  (+131 more)
.githooks/: README.md  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  REPO-GOVERNANCE.md
ao_kernel/: __init__.py  __main__.py  cli.py  client.py  config.py  doctor_cmd.py  errors.py  extension_truth_ratchet.py  governance.py  i18n.py  init_cmd.py  kernel_api_write_smoke.py  live_adapter_gate.py  llm.py  mcp_server.py  migrate_cmd.py  policy.py  prompts.py  real_adapter_smoke.py  real_adapter_workflow_smoke.py  roadmap.py  scorecard.py  session.py  telemetry.py  tool_gateway.py  workspace.py
docs/: ADAPTERS.md  BENCHMARK-FULL-MODE.md  BENCHMARK-REAL-ADAPTER-RUNBOOK.md  BENCHMARK-SUITE.md  COMPETITOR-MATRIX.md  CONSULTATION-QUERY.md  COORDINATION.md  COST-MODEL.md  DEMO-SCRIPT.md  EVIDENCE-TIMELINE.md  KNOWN-BUGS.md  METRICS.md  MODEL-ROUTING.md  OPERATIONS-RUNBOOK.md  POLICY-SIM.md  PROMPT-EXPERIMENTS-RUNBOOK.md  PUBLIC-BETA.md  ROLLBACK.md  SUPPORT-BOUNDARY.md  UPGRADE-NOTES.md  WORKTREE-PROFILE.md
examples/: demo_bugfix.py  demo_review.py
scripts/: claude_code_cli_smoke.py  claude_code_cli_workflow_smoke.py  gh_cli_pr_smoke.py  gp5_controlled_patch_test_rehearsal.py  gp5_disposable_pr_write_rehearsal.py  gp5_full_production_rehearsal.py  gp5_operations_support_package.py  gp5_platform_claim_decision.py  gp5_read_only_rehearsal.py  gpp_next.py  kernel_api_write_smoke.py  live_adapter_gate_attest.py  live_adapter_gate_contract.py  packaging_smoke.py  truth_inventory_ratchet.py
src/: __init__.py
tests/: _driver_helpers.py  _patch_helpers.py  _subprocess_crash_helper.py  conftest.py  test_adapter_manifest_loader.py  test_agent_coordination.py  test_api_key_resolver.py  test_artifacts_capability.py  test_backlog_modules.py  test_build_request_with_context_injected.py  test_canonical_store.py  test_canonical_store_cas.py  test_chaos.py  test_checkpoint.py  test_ci_errors.py  test_ci_runners.py  test_circuit_breaker.py  test_claude_code_cli_smoke.py  test_claude_code_cli_workflow_smoke.py  test_cli.py  test_cli_concurrency.py  test_cli_entrypoints.py  test_cli_repo_export.py  test_cli_repo_export_plan.py  test_cli_repo_index.py  test_cli_repo_query.py  test_cli_repo_scan.py  test_client.py  test_client_agent_coordination.py  test_client_vector_store_lifecycle.py  test_codex_stub.py  test_commit_ai_flow_bundled.py  test_commit_message_capability.py  test_config.py  test_consultation_d2a.py  test_consultation_d2b.py  test_consultation_paths.py  test_consultation_reader_facade.py  test_context_compiler.py  test_context_consultation_lane.py  (+187 more)
(+456 files in other folders)
