[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ao-kernel"
version = "2.1.1"
description = "Governed AI orchestration runtime — policy-driven, fail-closed, evidence-trail"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Halil Kocoglu"}
]
keywords = ["ai", "orchestrator", "llm", "policy", "governance", "fail-closed", "evidence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["jsonschema>=4.23.0"]

[project.urls]
Homepage = "https://github.com/Halildeu/ao-kernel"
Repository = "https://github.com/Halildeu/ao-kernel"
Issues = "https://github.com/Halildeu/ao-kernel/issues"

[project.optional-dependencies]
llm = [
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
    "mutmut",
]
otel = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]
mcp = [
    "mcp>=1.0.0",
]
mcp-http = [
    "mcp>=1.0.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]
pgvector = [
    "pgvector",
    "psycopg2-binary",
]

[project.scripts]
ao-kernel = "ao_kernel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ao_kernel", "ao_kernel.*"]
exclude = [
    "*_test",
    "*_test.*",
    "*_contract_test",
    "*_contract_test.*",
    "*.tests",
    "*.tests.*",
]

[tool.setuptools.package-data]
"ao_kernel.defaults" = ["**/*.json"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# Exclude files under .archive/ (historical patch backups)
exclude = ["^\\.archive/"]

# _internal: D13 — aşamalı tip kapsamı, test coverage gate'i de omit ediyor.
# _internal tipleri Tranş C'de sistemik olarak eklenecek. Şimdilik yalnızca bu
# katman override ile geçiliyor; public facade (ao_kernel/*.py + context/) tam
# strict mypy altında.
[[tool.mypy.overrides]]
module = "ao_kernel._internal.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "quality_waiver: exempt from test quality gate (requires justification)",
]

[tool.coverage.run]
source = ["ao_kernel"]
branch = true
omit = [
    "*/test_*",
    "*/_test*",
    "*/conftest.py",
    # _internal: aşamalı dahil etme (D13). Test edilen modüller dahil, geri kalan omit.
    "ao_kernel/_internal/prj_kernel_api/*",
    "ao_kernel/_internal/providers/*",
    "ao_kernel/_internal/secrets/*",
    "ao_kernel/_internal/shared/*",
    "ao_kernel/_internal/utils/*",
    "ao_kernel/_internal/roadmap/*",  # 2,497 LOC — 26 test var ama branch coverage %70 altında
    "ao_kernel/_internal/session/agent_context_version.py",
    "ao_kernel/_internal/session/cross_session_context.py",
    "ao_kernel/_internal/session/provider_memory.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.mutmut]
paths_to_mutate = "ao_kernel/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
