[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ao-kernel"
version = "3.13.1"
description = "Governed AI orchestration runtime — policy-driven, fail-closed, evidence-trail"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Halil Kocoglu"}
]
keywords = ["ai", "orchestrator", "llm", "policy", "governance", "fail-closed", "evidence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["jsonschema>=4.23.0"]

[project.urls]
Homepage = "https://github.com/Halildeu/ao-kernel"
Repository = "https://github.com/Halildeu/ao-kernel"
Issues = "https://github.com/Halildeu/ao-kernel/issues"

[project.optional-dependencies]
llm = [
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
    "mutmut",
]
otel = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]
mcp = [
    "mcp>=1.0.0",
]
mcp-http = [
    "mcp>=1.0.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]
pgvector = [
    "pgvector",
    "psycopg2-binary",
]
metrics = [
    "prometheus-client>=0.20.0",
]
# Meta-extras (PR-A6, widened in PR-B5 for metrics)
coding = [
    "ao-kernel[llm]",
]
enterprise = [
    "ao-kernel[otel,mcp,pgvector,metrics]",
]

[project.scripts]
ao-kernel = "ao_kernel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ao_kernel", "ao_kernel.*"]
exclude = [
    "*_test",
    "*_test.*",
    "*_contract_test",
    "*_contract_test.*",
    "*.tests",
    "*.tests.*",
]

[tool.setuptools.package-data]
"ao_kernel.defaults" = ["**/*.json"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# Exclude files under .archive/ (historical patch backups)
exclude = ["^\\.archive/"]

# _internal: D13 — aşamalı tip kapsamı. Tranş C içinde her submodule
# strict'e opt-in ediyor; public facade (ao_kernel/*.py + context/) zaten
# strict altında. Aşağıdaki override listesi, henüz strict'e geçmemiş
# submodule'leri saklar. Strict'e alınan submodule'ler listeden silinir.
# Opt-in sırası: providers (Tranş C / C1.1), shared, secrets, evidence,
# session, orchestrator, prj_kernel_api (son).
[[tool.mypy.overrides]]
module = [
    "ao_kernel._internal.utils.*",
    "ao_kernel._internal.roadmap.*",
    "ao_kernel._internal.mcp.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = []

[tool.coverage.run]
source = ["ao_kernel"]
branch = true
omit = [
    "*/test_*",
    "*/_test*",
    "*/conftest.py",
    # _internal: aşamalı dahil etme (D13). Test edilen modüller dahil, geri kalan omit.
    # Tranche history (chronological, each one removed a submodule from omit):
    # - v3.8 H1 tranche 1: `_internal/secrets/*` removed (test_api_key_resolver
    #   + test_secrets_deep + test_secrets_factory cover it; ~87% after pins).
    # - v3.9 post-release M1 (tranche 2): `_internal/utils/*` removed.
    #   budget.py + jsonio.py (38 LOC) already ~80% transitive;
    #   test_internal_utils_coverage.py pins empty/non-str, load_json
    #   roundtrip, to_canonical_json unicode + sort semantics.
    # - v3.11 P4 (tranche 3): `_internal/shared/*` removed. lock.py /
    #   logger.py / resource_loader.py / utils.py already 86-98%
    #   transitive; test_internal_shared_coverage.py pins remaining
    #   reachable branches (Windows platform guard, AO_LOG_LEVEL env
    #   var, repo-root fallback, jsonschema ImportError guard).
    #   `lock.py` flock release-failure + timeout race paths stay
    #   uncovered by design (need a second-process fixture; overall
    #   gate still holds).
    # - v3.11 P3 (tranche 4): `_internal/providers/*` removed.
    #   token_counter.py (tiktoken path tested via monkeypatched
    #   module + fake encoding class) + capability_model.py (registry
    #   load, resolve_manifest, probe overlay) pinned in
    #   test_internal_providers_coverage.py.
    # - v3.12 H2a (tranche 5A): roadmap/{compiler, roadmap_checkpoint,
    #   exec_contracts}.py removed from omit (all 89-97% transitive).
    #   test_internal_roadmap_small_coverage.py pins the small missing
    #   branches.
    # - v3.13 H2b1 (tranche 5B): roadmap/{change_proposals, sanitize,
    #   evidence}.py removed from omit. Dedicated pins in
    #   test_internal_roadmap_small_trio_coverage.py cover the real
    #   surfaces: validate_change + apply_change_to_roadmap_obj with
    #   all 4 patch ops; scan_directory rule matrix (FORBIDDEN_TOKEN /
    #   PRIVATE_KEY_MARKER / TOKEN_PREFIX_DETECTED) + findings_fingerprint
    #   determinism; init_evidence_dir + write_step_evidence + the
    #   SHA-256 integrity manifest envelope.
    # Remaining roadmap omits (step_templates, exec_evidence, exec_steps,
    # executor) stay deferred to v3.13+ larger tranches.
    "ao_kernel/_internal/prj_kernel_api/*",
    "ao_kernel/_internal/roadmap/exec_evidence.py",
    "ao_kernel/_internal/roadmap/exec_steps.py",
    "ao_kernel/_internal/roadmap/executor.py",
    "ao_kernel/_internal/roadmap/step_templates.py",
    # v3.12 H3 (tranche 6): agent_context_version removed from omit;
    # test_internal_session_agent_context_version_coverage.py pins the
    # error/edge branches (file_hash/_file_modified_at try-except,
    # extra_files, non-dict skip, load None).
    # v3.13 H3c (tranche 6B): provider_memory.py removed from omit.
    # test_internal_session_provider_memory_coverage.py writes against
    # the real session-context surface via new_context() +
    # save_context_atomic() harness — no mocks of load_context. Covered:
    # _safe_slug, resolve_auto_compact_token_limit codex-config guards,
    # read_provider_session_state (missing / invalid JSON /
    # memory_strategy branches / provider match+mismatch /
    # compaction_summary_ref), maybe_auto_compact_markdown threshold
    # guards + archive + summary + session update, persist_provider_result
    # missing/happy/invalid, _render_compaction_summary structured +
    # fallback + CRLF normalization.
    # cross_session_context.py stays omitted for now (v3.14+ tranche).
    "ao_kernel/_internal/session/cross_session_context.py",
    # PR-A4b: MultiStepDriver ships with unit coverage for entry
    # matrix, retry append-only, escalate_to_human, terminal
    # reconstruction, and helper paths. End-to-end branches that need
    # a real subprocess adapter chain + ci runner + patch primitive
    # are exercised by integration tests in PR-A5 (evidence timeline
    # CLI) and PR-A6 (demo runnable + production adapter fixtures).
    # Documented tech debt — see CHANGELOG PR-A4b Known Limitations.
    "ao_kernel/executor/multi_step_driver.py",
    # telemetry.py — OTEL is an optional extra (D12). Coverage on CI
    # without `pip install ao-kernel[otel]` is bounded by the no-op
    # fallback paths; the primary OTEL branches are exercised in the
    # dedicated test suite when the extra is present. Omit from the
    # ratchet gate to keep CI and local in sync.
    "ao_kernel/telemetry.py",
    # fixtures/codex_stub.py is exercised via subprocess in PR-A3
    # integration tests; coverage tool cannot attribute the subprocess
    # run to this file. Behavioural coverage via the integration test
    # suite is the effective gate here.
    "ao_kernel/fixtures/codex_stub.py",
]

[tool.coverage.report]
show_missing = true
# Tranş C ratchet: 70 (baseline) → 75 (C2 context_store) → 80 (C3 evidence/writer) → 85 (C4 workspace).
# v3.8 H1 preserves this 85 gate — the new `_internal/secrets/*`
# tranche lands with targeted pins so the overall stays ≥85%.
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    # v3.8 H1: typing.overload stubs are unreachable at runtime.
    "@overload",
    # v3.8 H1: TYPE_CHECKING-only imports never execute at runtime.
    "if TYPE_CHECKING:",
]

[tool.mutmut]
paths_to_mutate = "ao_kernel/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
